syntax = "proto3";

option java_multiple_files = true;
package com.marketplace.auth;

message UserRequest {
  int64 userId = 5;
}

message UserResponse {
  string email = 1;
  string username = 5;
}

service UserService {
  rpc GetUserById(UserRequest) returns (UserResponse);
}